--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,18 +1,9 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "declarationDir": "dist",
+        "declarationDir": "dist"
     },
-    "include": [
-        "src/**/*",
-        "src/easing.ts"
-    ],
-    "exclude": [
-        "src/utils/*"
-    ],
-    "files": [
-        "src/index.ts",
-        "src/easing.ts",
-        "src/types.ts"
-    ]
+    "include": ["src/**/*", "src/easing.ts"],
+    "exclude": ["src/utils/*"],
+    "files": ["src/index.ts", "src/easing.ts", "src/types.ts"]
 }
