--- a/packages/media/tsconfig.json
+++ b/packages/media/tsconfig.json
@@ -1,9 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "declarationDir": "dist/",
+        "declarationDir": "dist/"
     },
-    "include": [
-        "src/*"
-    ],
+    "include": ["src/*"]
 }
