--- a/packages/svelte/.prettierrc.json
+++ b/packages/svelte/.prettierrc.json
@@ -7,7 +7,5 @@
 	"svelteStrictMode": false,
 	"svelteAllowShorthand": true,
 	"svelteIndentScriptAndStyle": true,
-	"plugins": [
-			"prettier-plugin-svelte"
-	]
+	"plugins": ["prettier-plugin-svelte"]
 }
