--- a/packages/vue/tsconfig.json
+++ b/packages/vue/tsconfig.json
@@ -2,20 +2,18 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "baseUrl": ".",
-        "declarationDir": "dist/",
+        "declarationDir": "dist/"
         // "lib": [
         //     "DOM",
         //     "DOM.Iterable",
         //     "ESNext"
         // ]
     },
-    "include": [
-        "src/*"
-    ],
+    "include": ["src/*"],
     "exclude": [
         // "src/utils/*",
         // "src/index.ts"
-    ],
+    ]
     // "files": [
     //     "src/slidy.ts",
     //     "src/types.ts"
