--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "format": "prettier --ignore-path .gitignore packages/svelte --write '**/*.{js,ts,md,json,html,css}'",
         "deploy": "pnpm build:www && gh-pages -d www/build",
         "pub": "pnpm -r pub",
-        "pub:core": "pnpm --filter=@slidy/core pub"
+        "pub:core": "pnpm --filter=@slidy/core pub",
+        "up:all": "pnpm up -r --config.strict-peer-dependencies=false"
     },
     "repository": {
         "type": "git",
@@ -78,7 +79,7 @@
     },
     "devDependencies": {
         "@types/eslint": "^8.4.2",
-        "@types/node": "^17.0.34",
+        "@types/node": "^17.0.35",
         "@typescript-eslint/eslint-plugin": "^5.25.0",
         "@typescript-eslint/parser": "^5.25.0",
         "derver": "^0.5.3",
@@ -88,7 +89,7 @@
         "gh-pages": "^3.2.3",
         "open-props": "^1.3.16",
         "prettier": "^2.6.2",
-        "sass": "^1.51.0",
+        "sass": "^1.52.0",
         "tslib": "^2.4.0",
         "typescript": "^4.6.4"
     }
