@slidy/easing - init

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "dev:malina": "pnpm --filter=@slidy/malina... --parallel dev",
         "dev:svelte": "pnpm --filter=@slidy/svelte... --parallel dev:svelte",
         "dev:media": "pnpm --filter=@slidy/media dev",
+        "dev:easing": "pnpm --filter=@slidy/easing dev",
         "build:wc": "pnpm --filter=@slidy/wc build",
         "build:vue": "pnpm --filter=@slidy/vue build",
         "build:www": "pnpm --filter=@slidy/www build",
@@ -22,6 +23,7 @@
         "build:malina": "pnpm --filter=@slidy/malina build",
         "build:svelte": "pnpm --filter=@slidy/svelte build",
         "build:media": "pnpm --filter=@slidy/media build",
+        "build:easing": "pnpm --filter=@slidy/easing build",
         "format": "prettier --ignore-path .gitignore packages/svelte --write '**/*.{js,ts,md,json,html,css}'",
         "deploy": "pnpm build:www && gh-pages -d www/build",
         "pub": "pnpm -r pub",
