--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -3,7 +3,14 @@
     "compilerOptions": {
         "declarationDir": "dist"
     },
-    "include": ["src/**/*", "src/easing.ts"],
-    "exclude": ["src/utils/*"],
-    "files": ["src/index.ts", "src/easing.ts", "src/types.ts"]
+    "include": [
+        "src/**/*"
+    ],
+    "exclude": [
+        "src/utils/*"
+    ],
+    "files": [
+        "src/index.ts",
+        "src/types.ts"
+    ]
 }
