--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -3,14 +3,7 @@
     "compilerOptions": {
         "declarationDir": "dist"
     },
-    "include": [
-        "src/**/*"
-    ],
-    "exclude": [
-        "src/utils/*"
-    ],
-    "files": [
-        "src/index.ts",
-        "src/types.ts"
-    ]
+    "include": ["src/**/*"],
+    "exclude": ["src/utils/*"],
+    "files": ["src/index.ts", "src/types.ts"]
 }
