@slidy/core - step option

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "build:svelte": "pnpm --filter=@slidy/svelte build",
         "build:media": "pnpm --filter=@slidy/media build",
         "build:easing": "pnpm --filter=@slidy/easing build",
-        "format": "prettier --ignore-path .gitignore packages/svelte --write '**/*.{js,ts,md,json,html,css}'",
+        "format": "prettier --ignore-path .gitignore packages/svelte --write '**/*.{js,ts,md,json,html,css,md}'",
         "deploy": "pnpm build:www && gh-pages -d www/build",
         "pub": "pnpm -r pub",
         "pub:core": "pnpm --filter=@slidy/core pub",
