--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "deploy": "pnpm build:www && gh-pages -d www/build",
         "pub": "pnpm -r pub",
         "pub:core": "pnpm --filter=@slidy/core pub",
-        "up:all": "pnpm up -r --config.strict-peer-dependencies=false"
+        "up:all": "pnpm up -r"
     },
     "repository": {
         "type": "git",
@@ -81,7 +81,7 @@
     },
     "devDependencies": {
         "@types/eslint": "^8.4.2",
-        "@types/node": "^17.0.35",
+        "@types/node": "^17.0.36",
         "@typescript-eslint/eslint-plugin": "^5.26.0",
         "@typescript-eslint/parser": "^5.26.0",
         "derver": "^0.5.3",
