--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -1,12 +1,12 @@
 {
-    "extends": "./.svelte-kit/tsconfig.json",
-    // "compilerOptions": {
-    // "resolveJsonModule": true
-    // 	"paths": {
-    // 		"$lib": ["src/lib"],
-    // 		"$lib/*": ["src/lib/*"],
-    // 		"@slidy/svelte": ["../packages/svelte/src"],
-    // 		"@slidy/media": ["../packages/media/src"]
-    // 	}
-    // }
+	"extends": "./.svelte-kit/tsconfig.json"
+	// "compilerOptions": {
+	// "resolveJsonModule": true
+	// 	"paths": {
+	// 		"$lib": ["src/lib"],
+	// 		"$lib/*": ["src/lib/*"],
+	// 		"@slidy/svelte": ["../packages/svelte/src"],
+	// 		"@slidy/media": ["../packages/media/src"]
+	// 	}
+	// }
 }
