--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@slidy/core",
-    "version": "3.4.1",
-    "description": "Simple, configurable & reusable sliding action script",
+    "version": "3.4.2",
+    "description": "Simple, configurable, nested & reusable sliding action script",
     "main": "dist/index.cjs",
     "module": "dist/index.mjs",
     "browser": "dist/index.js",
