--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -4,6 +4,6 @@
         "declarationDir": "dist"
     },
     "include": ["src/**/*"],
-    "exclude": ["src/utils/*", "src/iife.ts"],
+    "exclude": ["src/lib/*", "src/iife.ts"],
     "files": ["src/index.ts", "src/types.ts"]
 }
