--- a/www/package.json
+++ b/www/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/kit": "^1.0.0-next.357",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^3.4.1",
+		"mdsvex": "^0.10.6",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.48.0",
 		"svelte-check": "^2.8.0",
