--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
         "deploy": "pnpm build:www && gh-pages -d www/build",
         "pub": "pnpm -r pub",
         "pub:core": "pnpm --filter=@slidy/core pub",
+        "pub:media": "pnpm --filter=@slidy/media pub",
+        "pub:easing": "pnpm --filter=@slidy/easing pub",
         "pub:animation": "pnpm --filter=@slidy/animation pub",
+        "pub:svelte": "pnpm --filter=@slidy/svelte pub",
         "up:all": "pnpm up -r"
     },
     "repository": {
