--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,6 @@
 # .npmrc
 auto-install-peers=true
+save-workspace-protocol=rolling
 # enable-pre-post-scripts=true
 # git-checks=false
 # shamefully-hoist=true
