--- a/www/package.json
+++ b/www/package.json
@@ -2,11 +2,11 @@
 	"name": "@slidy/www",
 	"version": "1.0.0",
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
-		"prepare": "svelte-kit sync",
+		"dev": "vite dev",
+		"build": "vite build",
+		"package": "vite package",
+		"preview": "vite preview",
+		"prepare": "vite sync",
 		"test": "playwright test",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -17,15 +17,16 @@
 		"@playwright/test": "^1.23.1",
 		"@slidy/media": "workspace:*",
 		"@slidy/svelte": "workspace:*",
-		"@sveltejs/adapter-static": "^1.0.0-next.34",
-		"@sveltejs/kit": "^1.0.0-next.357",
+		"@sveltejs/adapter-static": "1.0.0-next.34",
+		"@sveltejs/kit": "1.0.0-next.359",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^3.4.1",
 		"mdsvex": "^0.10.6",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.48.0",
 		"svelte-check": "^2.8.0",
-		"svelte-preprocess": "^4.10.7"
+		"svelte-preprocess": "^4.10.7",
+		"vite": "^2.9.13"
 	},
 	"type": "module"
 }
