--- a/.github/workflows/deploy-docs-gh.yml
+++ b/.github/workflows/deploy-docs-gh.yml
@@ -1,43 +1,46 @@
 name: build-and-deploy
+
 on:
   push:
+    branches: ['main']
     paths:
       - www/**
   pull_request:
+    branches: ['main']
     paths:
       - www/**
+
 jobs:
   build:
-    runs-on: windows-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.1
-      - name: Install and build
-        run: |
-          npm i pnpm -g
-          pnpm install
-          pnpm run build:www
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: project
-          path: www/build
-  deploy:
-    needs: [build]
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.1
-      - name: Download Artifacts
-        uses: actions/download-artifact@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          name: project 
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.4
+          node-version: 16
+          cache: 'npm'
+      - run: npm i pnpm -g
+      - run: pnpm ci
+      - run: pnpm run build:www
+      - uses: actions/upload-artifact@v3
         with:
-          branch: gh-pages
-          folder: project
-          clean: true
-          clean-exclude: |
-            .nojekyll
-            CNAME
+          name: build
+          path: www/build/
+  
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: gh-pages
+      - run: rm -rf *
+      - uses: actions/download-artifact@v3
+        with:
+          name: build
+      - uses: EndBug/add-and-commit@v9.0.0
+        with:
+          default_author: github_actions
+          message: Deployment
