--- a/.github/workflows/deploy-docs-gh.yml
+++ b/.github/workflows/deploy-docs-gh.yml
@@ -16,10 +16,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-#       - uses: actions/setup-node@v3
-#         with:
-#           node-version: 16
-#           cache: 'npm'
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'npm'
       - run: npm i pnpm -g
       - run: pnpm i
       - run: cd www && pnpm build
