--- a/.github/workflows/deploy-docs-gh.yml
+++ b/.github/workflows/deploy-docs-gh.yml
@@ -13,34 +13,46 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: setup node
+        uses: actions/setup-node@master
         with:
-          node-version: 16
-          cache: 'npm'
-      - run: cd www
-      - run: npm ci
-      - run: npm run build
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install dependencies
+      - run: npm i pnpm -g
+      - run: pnpm run build:www
       - uses: actions/upload-artifact@v3
         with:
           name: build
           path: www/build/
-  
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          ref: gh-pages
-      - run: rm -rf *
-      - uses: actions/download-artifact@v3
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v1
         with:
           name: build
-      - uses: EndBug/add-and-commit@v9.0.0
+          path: www/build
+  
+  deploy:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.1
+      - name: Download Artifacts
+        uses: actions/download-artifact@v1
         with:
-          default_author: github_actions
-          message: Deployment
+          name: build        
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages
+          folder: build
+          clean: true
+          clean-exclude: |
+            .nojekyll
