--- a/.github/workflows/deploy-docs-gh.yml
+++ b/.github/workflows/deploy-docs-gh.yml
@@ -22,7 +22,8 @@ jobs:
         uses: pnpm/action-setup@v2
         with:
           version: 7
-          run_install: true
+          run_install: |
+            - recursive: true
 
       - name: Setup NodeJS
         uses: actions/setup-node@v3
@@ -43,8 +44,8 @@ jobs:
           path: www/build/
   
       - name: Deploy Docs
-        uses: JamesIves/github-pages-deploy-action@v4
+        uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
           branch: gh-pages
           clean: true
-          folder: www/build
+          folder: ./www/build
