--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
         "dev:media": "pnpm --filter=@slidy/media dev",
         "dev:easing": "pnpm --filter=@slidy/easing dev",
         "dev:animation": "pnpm --filter=@slidy/animation dev",
-        "build:wc": "pnpm --filter=@slidy/wc build",
-        "build:vue": "pnpm --filter=@slidy/vue build",
-        "build:www": "pnpm --filter=@slidy/www build",
-        "build:core": "pnpm --filter=@slidy/core build",
-        "build:react": "pnpm --filter=@slidy/react build",
-        "build:solid": "pnpm --filter=@slidy/solid build",
-        "build:malina": "pnpm --filter=@slidy/malina build",
-        "build:svelte": "pnpm --filter=@slidy/svelte build",
-        "build:media": "pnpm --filter=@slidy/media build",
-        "build:easing": "pnpm --filter=@slidy/easing build",
-        "build:animation": "pnpm --filter=@slidy/animation build",
+        "build:wc": "pnpm -C packages/wc build",
+        "build:vue": "pnpm -C packages/vue build",
+        "build:www": "pnpm -C www build",
+        "build:core": "pnpm -C packages/core build",
+        "build:react": "pnpm -C packages/react build",
+        "build:solid": "pnpm -C packages/solid build",
+        "build:malina": "pnpm -C packages/malina build",
+        "build:svelte": "pnpm -C packages/svelte build",
+        "build:media": "pnpm -C packages/media build",
+        "build:easing": "pnpm -C packages/easing build",
+        "build:animation": "pnpm -C packages/animation build",
         "format": "prettier --write '**/*.{js,ts,md,json,html,css,md}'",
         "deploy": "pnpm build:www && gh-pages -d www/build",
         "pub": "pnpm -r pub",
