--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -1,20 +1,45 @@
 {
-	"extends": "./.svelte-kit/tsconfig.json",
-	"compilerOptions": {
-		"resolveJsonModule": true,
-		"paths": {
-			"$app/*": [ ".svelte/dev/runtime/app/*", ".svelte/build/runtime/app/*" ],
-			"@components": [ "src/lib/components/index.ts" ],
-      "@components/*": [ "src/lib/components/*" ],
-			"$lib": [ "src/lib" ],
-			"$lib/*": [ "src/lib/*" ],
-			"@lib/*": [ "src/lib/*" ],
-			"@paths": [ "src/core/paths.ts" ],
-      "@stores": [ "src/lib/stores/index.ts" ],
-      "@stores/*": [ "src/lib/stores/*" ],
-			"@styles/*": [ "src/lib/styles/*" ],
-			"@types": [ "src/types/index.ts" ],
-      "@utils/*": [ "src/lib/utils/*" ]
-		}
-	}
+    "extends": "./.svelte-kit/tsconfig.json",
+    "compilerOptions": {
+        "resolveJsonModule": true,
+        "paths": {
+            "$app/*": [
+                ".svelte/dev/runtime/app/*",
+                ".svelte/build/runtime/app/*"
+            ],
+            "@components": [
+                "src/lib/components/index.ts"
+            ],
+            "@components/*": [
+                "src/lib/components/*"
+            ],
+            "$lib": [
+                "src/lib"
+            ],
+            "$lib/*": [
+                "src/lib/*"
+            ],
+            "@lib/*": [
+                "src/lib/*"
+            ],
+            "@paths": [
+                "src/core/paths.ts"
+            ],
+            "@stores": [
+                "src/lib/stores/index.ts"
+            ],
+            "@stores/*": [
+                "src/lib/stores/*"
+            ],
+            "@styles/*": [
+                "src/lib/styles/*"
+            ],
+            "@types": [
+                "src/types/index.ts"
+            ],
+            "@utils/*": [
+                "src/lib/utils/*"
+            ]
+        }
+    }
 }
