--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/Valexr/slidy.git"
+        "url": "https://github.com/Valexr/Slidy.git"
     },
     "keywords": [
         "Svelte",
