--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,7 @@
 # .npmrc
 auto-install-peers=true
 save-workspace-protocol=rolling
+# strict-peer-dependencies=false
 # enable-pre-post-scripts=true
 # git-checks=false
 # shamefully-hoist=true
