--- a/www/package.json
+++ b/www/package.json
@@ -15,11 +15,11 @@
         "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
     },
     "devDependencies": {
-        "@playwright/test": "^1.23.2",
+        "@playwright/test": "^1.23.3",
         "@slidy/media": "workspace:*",
         "@slidy/svelte": "workspace:*",
-        "@sveltejs/adapter-static": "1.0.0-next.35",
-        "@sveltejs/kit": "1.0.0-next.370",
+        "@sveltejs/adapter-static": "^1.0.0-next.35",
+        "@sveltejs/kit": "^1.0.0-next.372",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-svelte3": "^3.4.1",
         "mdsvex": "^0.10.6",
