--- a/www/package.json
+++ b/www/package.json
@@ -16,6 +16,7 @@
     },
     "devDependencies": {
         "@playwright/test": "^1.23.2",
+        "@slidy/animation": "workspace:*",
         "@slidy/media": "workspace:*",
         "@slidy/svelte": "workspace:*",
         "@sveltejs/adapter-static": "1.0.0-next.35",
@@ -24,6 +25,7 @@
         "eslint-plugin-svelte3": "^3.4.1",
         "mdsvex": "^0.10.6",
         "prettier-plugin-svelte": "^2.7.0",
+        "rehype-slug": "^5.0.1",
         "svelte": "^3.49.0",
         "svelte-check": "^2.8.0",
         "svelte-preprocess": "^4.10.7",
