--- a/www/package.json
+++ b/www/package.json
@@ -23,12 +23,14 @@
 		"@sveltejs/kit": "^1.0.0-next.402",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^3.4.1",
+		"mdast-util-to-string": "^3.1.0",
 		"mdsvex": "^0.10.6",
 		"prettier-plugin-svelte": "^2.7.0",
 		"rehype-slug": "^5.0.1",
 		"svelte": "^3.49.0",
 		"svelte-check": "^2.8.0",
 		"svelte-preprocess": "^4.10.7",
+		"unist-util-visit": "^4.1.0",
 		"vite": "^3.0.4"
 	}
 }
