--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -17,7 +17,8 @@
             "require": "./dist/slidy.cjs",
             "browser": "./dist/slidy.js"
         },
-        "./package.json": "./package.json"
+        "./package.json": "./package.json",
+        "./slidy.css": "./dist/slidy.css"
     },
     "scripts": {
         "dev": "node esbuild --dev",
