--- a/packages/media/package.json
+++ b/packages/media/package.json
@@ -4,8 +4,7 @@
     "description": "Simple, observable & cookie-persisted media-query store",
     "main": "dist/index.cjs",
     "module": "dist/index.mjs",
-    "cdn": "dist/index.js",
-    "unpkg": "dist/index.js",
+    "browser": "dist/index.js",
     "types": "dist/index.d.ts",
     "type": "module",
     "files": [
