solidjs: use @slidy/assets

--- a/assets/package.json
+++ b/assets/package.json
@@ -3,8 +3,8 @@
     "version": "1.0.0",
     "description": "Slidy assets",
     "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+    "devDependencies": {
+        "@slidy/animation": "workspace:*"
     },
     "keywords": [],
     "author": "",
