solid-js: better readme

--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -23,7 +23,7 @@
         "Carousel",
         "Solid-plugin"
     ],
-    "author": "Artemy Schukin",
+    "author": "Artemiy Schukin",
     "contributors": [
         {
             "name": "Valexr",
@@ -31,7 +31,7 @@
             "url": "https://github.com/Valexr"
         },
         {
-            "name": "Artemy Schukin",
+            "name": "Artemiy Schukin",
             "url": "https://github.com/Artemis69"
         }
     ],
