--- a/assets/package.json
+++ b/assets/package.json
@@ -4,7 +4,8 @@
     "description": "Slidy assets",
     "main": "index.js",
     "devDependencies": {
-        "@slidy/animation": "workspace:*"
+        "@slidy/animation": "workspace:*",
+        "svelte": "^3.49.0"
     },
     "keywords": [],
     "author": "",
