--- a/assets/package.json
+++ b/assets/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "devDependencies": {
         "@slidy/animation": "workspace:*",
+        "@slidy/media": "workspace:*",
         "svelte": "^3.49.0"
     },
     "keywords": [],
