format & simplify builds

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "baseUrl": ".",
         "declarationDir": "dist"
     },
-    "include": ["src/**/*"],
-    "exclude": ["src/lib/*", "src/iife.ts"],
-    "files": ["src/index.ts", "src/types.ts"]
+    "include": ["src/*"],
+    "exclude": ["src/iife.ts"]
 }
