--- a/packages/animation/tsconfig.json
+++ b/packages/animation/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "baseUrl": ".",
         "declarationDir": "dist/"
     },
     "include": ["src/*"]
