--- a/packages/solid/tsconfig.json
+++ b/packages/solid/tsconfig.json
@@ -10,6 +10,6 @@
         "skipLibCheck": true,
         "preserveValueImports": true
     },
-    "include": ["src/*"],
+    "include": ["src/**/*", "src/dev/*"],
     "exclude": ["dist", "public"]
 }
