--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "build:animation": "pnpm --filter=@slidy/animation build",
         "build:www": "pnpm --filter=@slidy/www... build",
         "format": "prettier --write '**/*.{js,ts,md,json,html,css,md}'",
-        "deploy": "pnpm build:www && gh-pages -d www/build",
         "pub": "pnpm -r pub",
         "pub:core": "pnpm --filter=@slidy/core pub",
         "pub:media": "pnpm --filter=@slidy/media pub",
@@ -53,10 +52,20 @@
         "WebComponent",
         "Malina"
     ],
-    "author": "Valexr <valexr@gmail.com> (https://valexr.github.io)",
+    "author": {
+        "name": "Valexr",
+        "email": "valexr@gmail.com",
+        "url": "https://valexr.github.io"
+    },
     "contributors": [
-        "EricRovell (https://github.com/EricRovell)",
-        "yhdgms1 (https://github.com/yhdgms1)"
+        {
+            "name": "Artemiy Schukin",
+            "url": "https://github.com/yhdgms1"
+        },
+        {
+            "name": "Eric Rovell",
+            "url": "https://github.com/EricRovell"
+        }
     ],
     "license": "MIT",
     "bugs": {
@@ -97,7 +106,6 @@
         "esbuild": "^0.15.5",
         "esbuild-plugin-eslinter": "^0.1.3",
         "eslint": "^8.22.0",
-        "gh-pages": "^4.0.0",
         "open-props": "^1.4.13",
         "prettier": "^2.7.1",
         "sass": "^1.54.5",
