--- a/packages/easing/tsconfig.json
+++ b/packages/easing/tsconfig.json
@@ -1,8 +1,9 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "baseUrl": ".",
         "declarationDir": "dist/"
     },
-    "include": ["src/*"]
+    "include": [
+        "src/*"
+    ]
 }
