--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
         "esbuild": "^0.15.5",
         "esbuild-plugin-eslinter": "^0.1.3",
         "eslint": "^8.22.0",
+        "fast-glob": "^3.2.11",
         "open-props": "^1.4.14",
         "prettier": "^2.7.1",
         "sass": "^1.54.5",
