--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -52,7 +52,6 @@
         "@slidy/assets": "workspace:*",
         "@slidy/core": "workspace:*",
         "@slidy/easing": "workspace:*",
-        "esbuild-plugin-solid": "^0.4.2",
-        "fast-glob": "^3.2.11"
+        "esbuild-plugin-solid": "^0.4.2"
     }
 }
