@slidy/react - fix build types

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "jsx": "react",
         "baseUrl": ".",
         "declarationDir": "dist",
         "allowSyntheticDefaultImports": true,
@@ -8,6 +9,11 @@
         "skipLibCheck": true,
         "preserveValueImports": true
     },
-    "include": ["src/**/*", "src/dev/*"],
-    "exclude": ["dist", "public"]
+    "include": [
+        "src/*"
+    ],
+    "exclude": [
+        "dist",
+        "public"
+    ]
 }
