--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -49,7 +49,6 @@
         "react-dom": "^18.2.0"
     },
     "dependencies": {
-        "clsx": "^1.2.1",
-        "usehooks-ts": "^2.6.0"
+        "clsx": "^1.2.1"
     }
 }
