--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
         "dev:solid": "pnpm --filter=@slidy/solid... --parallel dev",
         "dev:malina": "pnpm --filter=@slidy/malina... --parallel dev",
         "dev:svelte": "pnpm --filter=@slidy/svelte... --parallel dev:svelte",
-        "build:wc": "pnpm --filter=@slidy/wc build",
-        "build:vue": "pnpm --filter=@slidy/vue build",
-        "build:react": "pnpm --filter=@slidy/react build",
-        "build:solid": "pnpm --filter=@slidy/solid build",
-        "build:malina": "pnpm --filter=@slidy/malina build",
-        "build:svelte": "pnpm --filter=@slidy/svelte build",
-        "build:core": "pnpm --filter=@slidy/core build",
-        "build:media": "pnpm --filter=@slidy/media build",
-        "build:easing": "pnpm --filter=@slidy/easing build",
-        "build:animation": "pnpm --filter=@slidy/animation build",
+        "build:wc": "pnpm --filter=@slidy/wc... build",
+        "build:vue": "pnpm --filter=@slidy/vue... build",
+        "build:react": "pnpm --filter=@slidy/react... build",
+        "build:solid": "pnpm --filter=@slidy/solid... build",
+        "build:malina": "pnpm --filter=@slidy/malina... build",
+        "build:svelte": "pnpm --filter=@slidy/svelte... build",
+        "build:core": "pnpm --filter=@slidy/core... build",
+        "build:media": "pnpm --filter=@slidy/media... build",
+        "build:easing": "pnpm --filter=@slidy/easing... build",
+        "build:animation": "pnpm --filter=@slidy/animation... build",
         "build:www": "pnpm --filter=@slidy/www... build",
         "format": "prettier --write '**/*.{js,ts,md,json,html,css,md}'",
         "pub": "pnpm -r pub",
@@ -98,11 +98,10 @@
         "singleQuote": true
     },
     "devDependencies": {
-        "@slidy/assets": "workspace:*",
         "@types/eslint": "^8.4.6",
         "@types/node": "^18.7.13",
-        "@typescript-eslint/eslint-plugin": "^5.34.0",
-        "@typescript-eslint/parser": "^5.34.0",
+        "@typescript-eslint/eslint-plugin": "^5.35.1",
+        "@typescript-eslint/parser": "^5.35.1",
         "derver": "^0.5.3",
         "esbuild": "^0.15.5",
         "esbuild-plugin-eslinter": "^0.1.3",
