--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -10,15 +10,6 @@
     "files": [
         "dist/*"
     ],
-    "exports": {
-        ".": {
-            "import": "./dist/slidy.mjs",
-            "module": "./dist/slidy.mjs",
-            "require": "./dist/slidy.cjs",
-            "browser": "./dist/slidy.js"
-        },
-        "./package.json": "./package.json"
-    },
     "scripts": {
         "dev": "node esbuild --dev",
         "build": "rm -rf dist && node esbuild && tsc --emitDeclarationOnly --outDir dist",
@@ -32,7 +23,25 @@
         "Carousel",
         "React-plugin"
     ],
-    "author": "EricRovell",
+    "author": {
+        "name": "Artemiy Schukin",
+        "url": "https://github.com/yhdgms1"
+    },
+    "contributors": [
+        {
+            "name": "Valexr",
+            "email": "valexr@gmail.com",
+            "url": "https://github.com/Valexr"
+        },
+        {
+            "name": "Artemiy Schukin",
+            "url": "https://github.com/yhdgms1"
+        },
+        {
+            "name": "Eric Rovell",
+            "url": "https://github.com/EricRovell"
+        }
+    ],
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/Valexr/slidy/issues"
@@ -42,13 +51,17 @@
         "@slidy/animation": "workspace:*",
         "@slidy/assets": "workspace:*",
         "@slidy/core": "workspace:*",
-        "@slidy/easing": "workspace:*",
+        "@slidy/easing": "workspace:*"
+    },
+    "dependencies": {
         "@types/react": "^18.0.17",
         "@types/react-dom": "^18.0.6",
+        "clsx": "^1.2.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
-    "dependencies": {
-        "clsx": "^1.2.1"
+    "peerDependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
