improve watch & react build

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -10,7 +10,8 @@
         "preserveValueImports": true,
     },
     "include": [
-        "src/*"
+        "src/*",
+        "src/dev/*"
     ],
     "exclude": [
         "dist",
