fix dev/build flow & format

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -3,10 +3,6 @@
     "compilerOptions": {
         "declarationDir": "dist"
     },
-    "include": [
-        "src/*"
-    ],
-    "exclude": [
-        "src/iife.ts"
-    ]
+    "include": ["src/*"],
+    "exclude": ["src/iife.ts"]
 }
