--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,20 +1,13 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "baseUrl": ".",
         "declarationDir": "dist",
         "jsx": "react-jsx",
         "allowSyntheticDefaultImports": true,
         "sourceMap": true,
         "skipLibCheck": true,
-        "preserveValueImports": true,
+        "preserveValueImports": true
     },
-    "include": [
-        "src/*",
-        "src/dev/*"
-    ],
-    "exclude": [
-        "dist",
-        "public"
-    ]
+    "include": ["src/*", "src/dev/*"],
+    "exclude": ["dist", "public"]
 }
