--- a/www/package.json
+++ b/www/package.json
@@ -16,10 +16,11 @@
 	"devDependencies": {
 		"@playwright/test": "^1.25.1",
 		"@slidy/animation": "workspace:*",
+		"@slidy/assets": "workspace:*",
 		"@slidy/media": "workspace:*",
 		"@slidy/svelte": "workspace:*",
 		"@sveltejs/adapter-static": "1.0.0-next.39",
-		"@sveltejs/kit": "^1.0.0-next.437",
+		"@sveltejs/kit": "^1.0.0-next.438",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^3.4.1",
 		"mdast-util-to-string": "^3.1.0",
